--- a/configuration/site-settings-service/api-reference/api.yml
+++ b/configuration/site-settings-service/api-reference/api.yml
@@ -299,6 +299,14 @@ paths:
               Patch Site:
                 value:
                   defaultLanguage: en
+              Adding and modifying mixin:
+                value:
+                  metadata:
+                    mixins:
+                      exampleMixin: 'https://res.cloudinary.com/saas-ag/raw/upload/v1764338354/emporix-docs/test3_v1.json'
+                  mixins:
+                    exampleMixin:
+                      field3: value3
       security:
         - OAuth2:
             - site.site_manage
@@ -1169,8 +1177,7 @@ components:
         * `active`
         * `none`
 
-        For retrieving `mixin`, use the following value:
-        * `*`
+        For retrieving `mixin`, use the following value: `*`
     expandWithMixins:
       name: expand
       description: |
