--- a/configuration/site-settings-service/api-reference/api.yml
+++ b/configuration/site-settings-service/api-reference/api.yml
@@ -903,6 +903,8 @@ components:
       type: object
       description: Information about the site.
       required:
+        - code
+        - name
         - defaultLanguage
         - languages
         - currency
