--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -1859,9 +1859,9 @@ components:
     CustomMcpServerTransportType:
       type: string
       enum:
-        - sse
         - streamable_http
-      description: Type of the communication between the agent and the MCP server. For now, only `sse` and `streamable_http` are supported.
+        - sse
+      description: Type of the communication between the agent and the MCP server. The `streamable_http` protocol is recommended, since the `sse` protocol is deprecated.
     BaseAgentMcpServer:
       type: object
       properties:
@@ -3202,9 +3202,9 @@ components:
         id: mcp-custom
         name: Custom MCP Server
         enabled: true
-        transport: sse
+        transport: streamable_http
         config:
-          url: 'http://localhost:7900/sse'
+          url: 'http://localhost:7900/mcp'
           authorizationHeaderName: Authorization
           authorizationHeaderTokenId: token-id
     McpServersResponse:
@@ -3319,10 +3319,10 @@ components:
     McpServerRequest:
       value:
         name: Custom MCP Server
-        transport: sse
+        transport: streamable_http
         enabled: true
         config:
-          url: 'http://localhost:7900'
+          url: 'http://localhost:7900/cmp'
           authorizationHeaderName: Authorization
           authorizationHeaderTokenId: token-id
     TokenRequest:
